k8s/front/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  namespace: sbuasa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      imagePullSecrets:
            - name: ghcr-secret
      containers:
        - name: streamlit
          image: ghcr.io/blackphoenix2020/streamlit-front:latest
          ports:
            - containerPort: 8501

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "600m"
              memory: "768Mi"
