k8s/front/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit
  namespace: sbuasa
spec:
  type: ClusterIP
  selector:
    app: streamlit
  ports:
    - port: 8501
      targetPort: 8501
